--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,27 +19,27 @@
             
               <h1 id="main-title">Sign Up</h1>
               <p id="subtitle">It only takes a minute!</p>
-              <form action="">
+              <form action="/register" method="post">
     
   
                   <div id="username" class="placeholders">
                       <label id="pl_username" for="text" class="">Username (up to 8 characters)</label>
-                      <input required id="pl_username" type="text" name="username" maxlength="8" placeholder="Enter your username...">
+                      <input required id="pl_username" type="text" name="username2" maxlength="8" placeholder="Enter your username...">
                   </div>
 
                   <div id="Fname" class="placeholders "style= "margin-top: 20px;">
                     <label id="pl_Fname" for="text" class > First Name</label>
-                    <input required id="pl_Fname" type="Fname" name="Fname" placeholder="Enter your Name...">
+                    <input required id="pl_Fname" type="Fname" name="firstName" placeholder="Enter your Name...">
                 </div>
 
                 <div id="Lname" class="placeholders "style= "margin-top: 20px;">
                   <label id="pl_Lname" for="text" class > Last Name</label>
-                  <input required id="pl_Lname" type="Lname" name="Lname" placeholder="Enter your Last Name...">
+                  <input required id="pl_Lname" type="Lname" name="lastName" placeholder="Enter your Last Name...">
               </div>
   
                   <div id="email" class="placeholders "style= "margin-top: 20px;">
                       <label id="pl_email" for="text" class > Email</label>
-                      <input required id="pl_email" type="email" name="email" placeholder="Enter your email...">
+                      <input required id="pl_email" type="email" name="emailAddress" placeholder="Enter your email...">
                   </div>
   
                   <div id="password" class="placeholders"style= "margin-top: 20px;">
@@ -54,7 +54,7 @@
                   
                   <br>
               
-                  <button onclick="" id="a-submit" href="#">Submit</button>
+                   <div><input type="submit" value="register"/></div>
   
                 </form> 
   
