--- a/views/product.html
+++ b/views/product.html
@@ -8,7 +8,31 @@
 
    	<div id="main-container">
 
-	    {{>header2}} 
+	<header>
+      <div id="logo">
+     
+
+      </div>
+
+      <div id="search">
+        
+        <section class="searchProperties">
+          <form action="" method="">		    
+            <input type="search" placeholder="What are you looking for?">		    	
+            <button>Search</button>
+          </form>
+        </section>
+ 
+     </div>
+      
+     <div id="login2">
+      
+<h1>Welcome user </h1>
+<a href="https://www.w3.org/">Preferences</a>
+<a href="../">Logout</a>
+    </div>
+
+</header>
 				<div id="MainBody" >
 
           <div id="LeftBox">
@@ -161,7 +185,12 @@
 
 				
 
-{{>footer}} 
+  <footer>
+			
+      <h1>Footer</h1>
+      
+      
+</footer><!-- close footer -->		
  
 	</div><!-- main container -->
 </body>
