--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,57 @@
 
    	<div id="main-container">
 
-	    {{>header}} 
+        <header>
+            <div id="logo">
+           
+      
+            </div>
+      
+            <div id="search">
+              
+              <section class="searchProperties">
+                <form action="" method="">		    
+                  <input type="search" placeholder="What are you looking for?">		    	
+                  <button>Search</button>
+                </form>
+              </section>
+       
+           </div>
+            
+           <div id="login2">
+            <div class="container bar">
+              <label class="floatLeft" for="navBtn"><span></span></label>
+          </div>
+          <div class="container">
+              <input type="checkbox" class="navBtn" id="navBtn" />
+              <nav>
+                <div class="row">
+                  <div class="form-p">
+      <form action="/signup" method="post">
+          <div>
+              <label>Username:</label>
+              <input type="text" name="username"/><br/>
+          </div>
+          <div>
+              <label>Password:</label>
+              <input type="password" name="password"/>
+          </div>
+          <div><input type="submit" value="Sign Up"/></div>
+      </form>
+              
+                    <p><a href="">Forget your password ?</a></p>
+              </nav>
+          </div>
+      
+          </div>
+      
+      <script src="js/handleForm.js" type="text/javascript"></script>
+            
+       
+      
+      
+      
+              </header><!-- close header -->		
 				<div id="MainBody" >
 
           <div id="LeftBox">
@@ -68,8 +118,12 @@
 				
 
 				
-
-{{>footer}} 
+    <footer>
+			
+        <h1>Footer</h1>
+        
+        
+  </footer><!-- close footer -->		
  
 	</div><!-- main container -->
 </body>
