--- a/views/index.html
+++ b/views/index.html
@@ -15,13 +15,11 @@
             </div>
       
             <div id="search">
-              
-              <section class="searchProperties">
-                <form action="" method="">		    
-                  <input type="search" placeholder="What are you looking for?">		    	
-                  <button>Search</button>
+
+                <form action="/search" method="GET">
+                  <input id="query" type="text" name="searchItem" placeholder="What are you looking for?">
+                  <input type="submit" value="GO">
                 </form>
-              </section>
        
            </div>
             
