need to figure out displaying http response to html

--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
       
           </div>
       
-      <script src="js/handleForm.js" type="text/javascript"></script>
+      <script src="js/index.js" type="text/javascript"></script>
             
        
       
